week3 4th updated

--- a/week-exercises/week3/4.mysore/index.html
+++ b/week-exercises/week3/4.mysore/index.html
@@ -15,7 +15,7 @@
     <input type="text" name = "hometown" id = "hometown"><br>
     <button type="" onclick="handleClick()">Click</button>
     <p id="year"></p>
-    <p id="home1"></p>
+    <a href="" id="home1" target="_blank"></a> <br><br>
     <a href="" id="home2" target="_blank"></a>
 
     <script>
@@ -24,6 +24,7 @@
             var hometown = document.getElementById('hometown').value;
             var cur = new Date().getFullYear();
             document.getElementById('year').innerHTML='Age : '+age.toString()+" year : "+(cur-age).toString();
+            document.getElementById('home1').href = "https://www.google.com/search?q="+ hometown ;
             document.getElementById('home1').innerHTML = hometown;
             document.getElementById('home2').href = "https://www.google.com/maps/place/"+hometown ;
             document.getElementById('home2').innerHTML = 'Link to ur hometown'
