--- a/week-exercises/week4/4.passwordValidate/index.html
+++ b/week-exercises/week4/4.passwordValidate/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        var a, b, c;
+        var a, b,c;
         var d = "password";
         const change = (t)=>{
             c = t
@@ -19,7 +19,7 @@
                 if (c==d){
                     document.getElementById("success").innerText = "Validation Successful";
                 }
-                else{
+                else
                     a = window.prompt("Ur Fav Color?");
                     if (a=="blue"){
                         document.getElementById("success").innerText = "Validation Successful"
@@ -28,7 +28,6 @@
                         document.getElementById("success").innerText = "Validation UnSuccessful"
                     }
                 }
-            }
         }
     </script>
 
