--- a/week-exercises/week4/5.rankings/index.html
+++ b/week-exercises/week4/5.rankings/index.html
@@ -13,8 +13,8 @@
             (function(t){
                 setTimeout(function(){
                     console.log(t,rankings[t])
-                },t*5000);
-            })(i);
+                },t*1000);
+            })(i); //self invoking function
         }
     </script>
 
