--- a/week-exercises/week6/1.calculator/index.html
+++ b/week-exercises/week6/1.calculator/index.html
@@ -18,8 +18,9 @@
         calculator.prototype.getAnswer = function () {
             return this.num;
         };
+        var res = new calculator(2);
         console.log(
-            new calculator(2)
+                res
                 .add(2)
                 .add(2)
                 .subtract(3)
