--- a/exam/11/11a.html
+++ b/exam/11/11a.html
@@ -5,9 +5,7 @@
     <style>
         h1 {
             background-color: #D18C1D;
-            border-width: 1px;
-            border-style: solid;
-            border-color: red;
+            border: 1px solid red;
             padding: 10px;
         }
 
@@ -19,8 +17,7 @@
         p {
             height: 400px;
             width: 600px;
-            border-style: dotted;
-            border-width: 2px;
+            border: 2px dotted black;
             background-color: #D1D631;
         }
     </style>
