--- a/exam/1/1b.html
+++ b/exam/1/1b.html
@@ -13,7 +13,7 @@
       USN: <input type="text" required name="usn" /><br />
       Name : <input type="text" required name="name" /><br />
       Subject Code : <input type="text" required name="subCode" /><br />
-      CIE Marks : <input type="text" name="marks" required /><br />
+      CIE Marks : <input type="number" name="marks" required /><br />
       <input type="submit" value="Submit" />
     </form>
 
