--- a/exam/3/3a.html
+++ b/exam/3/3a.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+	<title>Calc</title>
+</head>
+<body>
 	<script type="text/javascript">
 		function calculator(num)
 		{
@@ -25,5 +28,5 @@
 		console.log(ans)
         document.write("<h3>answer = "+ans+"</h3>")
 	</script>
-</head>
+</body>
 </html>
